// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create non existing note hint redirects when the note has been created 1`] = `
<div>
  <span
    data-testid="redirect"
  >
    Redirecting to
     
    <a
      href="/n/mockedPrimaryAlias"
    >
      /n/mockedPrimaryAlias
    </a>
  </span>
</div>
`;

exports[`create non existing note hint renders a waiting message when button is clicked 1`] = `
<div>
  <div
    class="d-flex flex-column mt-5"
    data-testid="loadingMessage"
  >
    <b>
      <i
        class="fa  fa-spinner fa-spin mr-2 "
      />
      noteLoadingBoundary.createNote.creating
    </b>
  </div>
</div>
`;

exports[`create non existing note hint renders an button as initial state 1`] = `
<div>
  <div
    class="d-flex flex-column mt-5"
  >
    <b>
      noteLoadingBoundary.createNote.question
    </b>
    <div
      class="mt-2"
    >
      <button
        class="mx-2 btn btn-primary"
        data-testid="createNoteButton"
        type="submit"
      >
        noteLoadingBoundary.createNote.create
      </button>
    </div>
  </div>
</div>
`;

exports[`create non existing note hint shows an error message if note couldn't be created 1`] = `
<div>
  <div
    class="fade alert alert-danger show"
    data-testid="failedMessage"
    role="alert"
  >
    <i
      class="fa  fa-exclamation-triangle mr-1 "
    />
    noteLoadingBoundary.createNote.error
  </div>
</div>
`;
